--- a/src/components/Dialogs/GamePageDialog.css
+++ b/src/components/Dialogs/GamePageDialog.css
@@ -62,6 +62,7 @@
             z-index: 1;
 
             .gp-title {
+                display: block;
                 font-size: 24px;
                 padding: 0 12px;
                 color: #fff;
