--- a/src/components/common/CenterAndEdgesRow.css
+++ b/src/components/common/CenterAndEdgesRow.css
@@ -10,6 +10,7 @@
         overflow: hidden;
         text-overflow: ellipsis;
         min-width: 0;
+        max-width: 100%;
     }
 
     & > :nth-child(1) {
